# lomiri-app-launch

./: CMakeLists.txt  ChangeLog
data/: com.lomiri.LomiriAppLaunch.SocketDemangler.xml  com.lomiri.LomiriAppLaunch.xml
debian/: changelog  clean  control  copyright  copyright.in  liblomiri-app-launch-dev.install  liblomiri-app-launch0.install  liblomiri-app-launch0.symbols  lomiri-app-launch-tools.install  lomiri-app-launch-tools.lintian-overrides  lomiri-app-launch.install  lomiri-app-launch.postinst.in  lomiri-app-test.install  lomiri-app-test.lintian-overrides  rules  watch
debian/patches/: 0004_Fix-compile-error-with-new-glib-versions.patch  1001_fix-gir-api-version.patch  1002_typo-fixes.patch  1003_add-missing-keywords-key.patch  2001_fix-path-to-sh.patch  2002_disable-non-thread-safe-tests.patch  2003_remove-werror.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
docs/: Doxyfile  Makefile  conf.py  index.rst
liblomiri-app-launch/: CMakeLists.txt  app-store-base.cpp  app-store-base.h  app-store-legacy.cpp  app-store-legacy.h  app-store-libertine.cpp  app-store-libertine.h  app-store-snap.cpp  app-store-snap.h  appid.h  application-icon-finder.cpp  application-icon-finder.h  application-impl-base.cpp  application-impl-base.h  application-impl-legacy.cpp  application-impl-legacy.h  application-impl-libertine.cpp  application-impl-libertine.h  application-impl-snap.cpp  application-impl-snap.h  application-info-desktop.cpp  application-info-desktop.h  application.cpp  application.h  glib-thread.cpp  helper-impl.h  helper.cpp  helper.h  info-watcher-zg.cpp  info-watcher-zg.h  info-watcher.cpp  info-watcher.h  jobs-base.cpp  jobs-base.h  jobs-posix.cpp  jobs-posix.h  jobs-systemd.cpp  jobs-systemd.h  liblomiri-app-launch.map  lomiri-app-launch-trace.tp  (+16 more)
liblomiri-app-launch/abi-check/: CMakeLists.txt  build.xml.in  check-abi.sh.in  installed.xml.in
lomiri-app-test/data/: CMakeLists.txt  lomiri-app-test.desktop.in  lomiri-app-test.qml
lomiri-app-test/src/: CMakeLists.txt  lomiri-app-test.cpp
tests/: CMakeLists.txt  app-store-legacy.cpp  application-icon-finder.cpp  application-info-desktop.cpp  helper-handshake-test.cc  helper-test.cc  jobs-base-test.cpp  jobs-systemd.cpp  libertine-service.h  libual-cpp-test.cc  libual-test.cc  list-apps.cpp  lomiri-app-launch-mock.c  lomiri-app-launch-mock.h  manual  registry-mock.h  snapd-info-test.cpp  test-directory.h
tests/applications/: foo.desktop  multiple.desktop  noxmir.desktop  qmlapp.desktop  single.desktop  xmir.desktop
tools/: CMakeLists.txt  lomiri-app-info.cpp  lomiri-app-launch-appids.cpp  lomiri-app-launch.cpp  lomiri-app-list-pids.cpp  lomiri-app-list.cpp  lomiri-app-pid.cpp  lomiri-app-stop.cpp  lomiri-app-triplet.cpp  lomiri-app-usage.c  lomiri-app-watch.cpp  lomiri-helper-list.cpp  lomiri-helper-start.cpp  lomiri-helper-stop.cpp
utils/: CMakeLists.txt  socket-demangler.c  systemd-helper-helper.c
